# tdd_chess

./: CMakeLists.txt  main.cpp
include/: bishop.h  board.h  cell.h  color_enum.h  constants.h  figure.h  king.h  knight.h  pawn.h  queen.h  rook.h  text.h  window.h
src/: bishop.cpp  board.cpp  cell.cpp  figure.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp  text.cpp  window.cpp
tests_include/: bishop_test.h  board_test.h  cell_test.h  figure_test.h  king_test.h  knight_test.h  pawn_test.h  queen_test.h  rook_test.h  test.h  text_test.h  window_test.h
tests_src/: cell_test.cpp  test.cpp
